' Preview durch <Alt>d

@startuml ER Diagramm

' hide the spot
hide circle

' evtl. Prbleme mit Kraehenfuessen vermeiden
skinparam linetype ortho

entity "Album" {
  * id: integer <<generated>>
  --
  * version: integer
  * genre: text
  * name: text
  * titelbild: text
  * **kuenstler_id**: integer <<FK>>
  * erzeugt: timestamp
  * aktualisiert: timestamp
}

entity "Kuenstler" {
  * id: integer <<generated>>
  --
  * name: text
    vorname: text
}

entity "Lied" {
  * id: integer <<generated>>
  --
  * name: text
    dauerInSekunden: integer
  * **album_id**: integer <<FK>>
}

Album ||..|| Kuenstler
Album ||..o{ Lied

footer (c) Gruppe 4

@enduml
